--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <div>
+        <img src="{{ site.logo | relative_url }}public/ruhdorfer.jpeg" alt="{{ site.title }}" style="border-radius: 50%;">
+      </div>
       <h1>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
