--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <div>
-        <img src="{{ site.logo | relative_url }}public/ruhdorfer.jpeg" alt="{{ site.title }}" style="border-radius: 50%;">
+        <img src="{{ '/' | relative_url }}public/ruhdorfer.jpeg" alt="{{ site.title }}" style="border-radius: 50%;">
       </div>
       <h1>
         <a href="{{ '/' | relative_url }}">
