--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -341,7 +341,7 @@ tbody tr:nth-child(odd) th {
 }
 .page-title,
 .post-title {
-  margin-top: 0;
+  margin-top: 1em;
 }
 
 /* Meta data line below post title */
