--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="google-site-verification" content="JG0inbouY92J9lVmfftSJbnPbfiu-9zL8Z0U89p5BLM" />
 
   <title>
     {% if page.title == "Home" %}
